tests/baselines/reference/inferSetterParamType.errors.txt
inferSetterParamType.ts(13,9): error TS2322: Type 'number' is not assignable to type 'string'.


==== inferSetterParamType.ts (1 errors) ====
    class Foo {
    
        get bar() {
            return 0;
        }
        set bar(n) { // should not be an error - infer number
        }
    }
    
    class Foo2 {
    
        get bar() {
            return 0; // should be an error - can't coerce infered return type to match setter annotated type
            ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
        }
        set bar(n:string) {
        }
    }
    